--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,6 +14,11 @@
       "openFiles": [
         "src/App.js"
       ]
+    },
+    "vscode": {
+      "extensions": [
+        "NicholasHsiang.vscode-react-snippet"
+      ]
     }
   },
   "portsAttributes": {
